@@ -46,7 +46,9 @@ START_TEST (test_XMLError_create)
   error = new XMLError(DuplicateXMLAttribute);
   fail_unless( error->getErrorId()  == DuplicateXMLAttribute );
   fail_unless( error->getSeverity() == LIBSBML_SEV_ERROR );
+  fail_unless( error->getSeverityAsString() == "Error" );
   fail_unless( error->getCategory() == LIBSBML_CAT_XML );
+  fail_unless( error->getCategoryAsString() == "XML content");
   fail_unless( error->getMessage()  == "Duplicate attribute." );
   delete error;
 
@@ -54,7 +56,9 @@ START_TEST (test_XMLError_create)
   fail_unless( error->getErrorId()  == 12345 );
   fail_unless( error->getMessage()  == "My message" );
   fail_unless( error->getSeverity() == LIBSBML_SEV_FATAL );
+  fail_unless( error->getSeverityAsString() == "Fatal error" );
   fail_unless( error->getCategory() == LIBSBML_CAT_INTERNAL );
+  fail_unless( error->getCategoryAsString() == "Internal");
   delete error;
 
   error = new XMLError(12345, "My message", 0, 0,
@@ -62,7 +66,9 @@ START_TEST (test_XMLError_create)
   fail_unless( error->getErrorId()  == 12345 );
   fail_unless( error->getMessage()  == "My message" );
   fail_unless( error->getSeverity() == LIBSBML_SEV_INFO );
+  fail_unless( error->getSeverityAsString() == "Information" );
   fail_unless( error->getCategory() == LIBSBML_CAT_SYSTEM );
+  fail_unless( error->getCategoryAsString() == "Operating system");
   fail_unless( error->isInfo() );
   fail_unless( error->isSystem() );
   delete error;
@@ -72,7 +78,9 @@ START_TEST (test_XMLError_create)
   fail_unless( error->getErrorId()  == 10000 );
   fail_unless( error->getMessage()  == "Another message" );
   fail_unless( error->getSeverity() == LIBSBML_SEV_FATAL );
+  fail_unless( error->getSeverityAsString() == "Fatal error" );
   fail_unless( error->getCategory() == LIBSBML_CAT_XML );
+  fail_unless( error->getCategoryAsString() == "XML content");
   fail_unless( error->isFatal() );
   fail_unless( error->isXML() );
   delete error;
